<resources>
    <string name="app_name" translatable="false">Yandex Translate Sample</string>

    <string name="title_translate">Translate</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_history">History</string>
    <string name="title_info">Information</string>

    <string name="ui_code" translatable="false">en</string>

    <string name="select_language">Select language</string>

    <string name="translate_error">An error occurred</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="nothing_to_save">Nothing to save</string>

    <string name="connection_error_when_start">Connection error.\nTranslating is not enable.</string>
    <string name="reconnect">Reconnect</string>
    <string name="history_search_text">Find in the history</string>
    <string name="bookmarks_search_text">Find in the bookmarks</string>

    <string name="translate_source_hint">Text to translate</string>

    <string name="add_to_bookmarks">Add to bookmarks</string>
    <string name="remove_from_bookmarks">Remove from bookmarks</string>
    <string name="remove">Remove</string>

    <string name="translated_with_yandex">Translated by service "Yandex.Translator"</string>
    <string name="yandex_api_address" translatable="false">http://translate.yandex.ru/</string>

    <string name="about_app">About</string>
    <string name="acknowledgment">Apart from that, this program uses the following third-party libraries:</string>
    <string name="bookmark_actions">Item actions</string>

</resources>
