<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.gcteam.yandextranslate.translate.TranslateFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <android.support.v7.widget.AppCompatButton android:id="@+id/source_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/colorPrimary"/>
                <at.markushi.ui.CircleButton android:id="@+id/swap_languages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/ic_swap_horiz_black_24dp"
                    android:tint="@color/dark"
                    app:cb_color="@color/grey"
                    app:cb_pressedRingWidth="16dp"/>
                <android.support.v7.widget.AppCompatButton android:id="@+id/target_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/colorPrimary"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="?attr/actionBarSize">

        <GridLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:cardElevation="2dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">
                    <EditText android:id="@+id/source_text"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:minLines="3"
                        android:maxLines="7"
                        android:textSize="16sp"
                        android:gravity="top|start"
                        android:layout_gravity="left|center_vertical"
                        android:hint="@string/translate_source_hint"
                        android:background="@color/white"
                        android:inputType="textShortMessage|textMultiLine"
                        android:imeOptions="actionSend|flagNoEnterAction"/>

                    <at.markushi.ui.CircleButton android:id="@+id/clear_source"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:padding="4dp"
                        android:src="@drawable/ic_clear_black_24dp"
                        android:tint="@color/dark"
                        android:layout_gravity="bottom"
                        app:cb_color="@color/grey"
                        app:cb_pressedRingWidth="16dp"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView android:id="@+id/translation"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="8dp"
                android:textColor="@color/dark"
                android:freezesText="true"/>

            <at.markushi.ui.CircleButton android:id="@+id/add_bookmark"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_bookmark_black_24dp"
                android:tint="@color/dark"
                app:cb_color="@color/grey"
                app:cb_pressedRingWidth="16dp"/>

            <TextView android:id="@+id/translated_with_yandex"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnSpan="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="16sp"
                android:textColor="@color/dark"
                android:text="@string/translated_with_yandex"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_row="4"
                android:layout_column="0"
                android:layout_columnSpan="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="16sp"
                android:linksClickable="true"
                android:autoLink="web"
                android:text="@string/yandex_api_address"
                android:layout_marginBottom="16dp"/>

        </GridLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>